--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+    font-family: 'Helvetica';
+}
+
 .axis path,
 .axis line {
     fill: none;
@@ -6,7 +10,7 @@
 }
 
 .axis text {
-    font-family: sans-serif;
+    font-family: 'Helvetica';
     font-size: 10px;
 }
 
