--- a/style.css
+++ b/style.css
@@ -2,6 +2,19 @@ html{
     font-family: 'Helvetica';
 }
 
+body{
+    margin:0px;
+}
+
+.top-half{
+    width:100%;
+    text-align:center;
+    background-color:#1b1b1b;
+    -webkit-box-shadow: 0px 6px 16px 0px rgba(0,0,0,0.46);
+    -moz-box-shadow: 0px 6px 16px 0px rgba(0,0,0,0.46);
+    box-shadow: 0px 6px 16px 0px rgba(0,0,0,0.46);
+}
+
 .axis path,
 .axis line {
     fill: none;
