--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body{
     box-shadow: 0px 6px 16px 0px rgba(0,0,0,0.46);
 }
 
+text.timeline-label{
+    display:none;
+}
+
 .axis path,
 .axis line {
     fill: none;
