--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ text.timeline-label{
 }
 
 .axis text {
-    font-family: 'Helvetica';
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 900;
     font-size: 10px;
 }
 
@@ -44,6 +45,30 @@ text.timeline-label{
     -moz-transform: translate(0px,30px); /* Firefox */
 }
 
+#timeline3 {
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+}
+
 .coloredDiv {
     height:20px; width:20px; float:left;
+}
+
+image {
+    opacity: 0.8;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+image:hover {
+    opacity: 1;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
